placeholders football field

--- a/markup/_dist/assets/css/style.css
+++ b/markup/_dist/assets/css/style.css
@@ -10117,7 +10117,7 @@ p {
   #loginModal .modal-footer button {
     width: 17.375rem;
     margin: 0 auto;
-    font-size: 1.78813rem; }
+    font-size: 1.78812rem; }
 
 @media (min-width: 576px) {
   .modal-dialog {
@@ -10234,7 +10234,7 @@ p {
   #registrationModal .modal-footer button {
     width: 17.375rem;
     margin: 0 auto;
-    font-size: 1.78813rem; }
+    font-size: 1.78812rem; }
 
 @media (min-width: 576px) {
   .modal-dialog {
@@ -13922,6 +13922,12 @@ td:nth-child(4).homepage-list-view {
   background-size: contain;
   min-width: 100%;
   background-size: 100% 100%; }
+  .nl-create-team .nl-team-field .display-none,
+  .nl-live-score .nl-team-field .display-none {
+    display: none !important; }
+  .nl-create-team .nl-team-field .vis-hidden,
+  .nl-live-score .nl-team-field .vis-hidden {
+    visibility: hidden; }
   @media only screen and (min-width: 992px) and (max-width: 1200px) {
     .nl-create-team .nl-team-field .football.player-main-block,
     .nl-live-score .nl-team-field .football.player-main-block {
@@ -14189,7 +14195,7 @@ td:nth-child(4).homepage-list-view {
     #loginSection .block-footer button {
       width: 17.375rem;
       margin: 0 auto;
-      font-size: 1.78813rem; }
+      font-size: 1.78812rem; }
 
 @media (min-width: 576px) {
   .block-dialog {
@@ -14445,7 +14451,7 @@ td:nth-child(4).homepage-list-view {
     #changePasswordSection .block-footer button {
       width: 17.375rem;
       margin: 0 auto;
-      font-size: 1.78813rem; }
+      font-size: 1.78812rem; }
 
 @media (min-width: 576px) {
   .block-dialog {
@@ -16220,7 +16226,7 @@ p.ads {
     #editProfileSection .block-footer button {
       width: 17.375rem;
       margin: 0 auto;
-      font-size: 1.78813rem; }
+      font-size: 1.78812rem; }
 
 @media (min-width: 576px) {
   .block-dialog {
