--- a/markup/_scss/sections/_nl-create-team.scss
+++ b/markup/_scss/sections/_nl-create-team.scss
@@ -692,6 +692,14 @@
     min-width: 100%;
     background-size: 100% 100%;
 
+    .display-none {
+      display: none !important;
+    }
+
+    .vis-hidden {
+      visibility: hidden;
+    }
+
   @include respond-to(wide-tablets){
 
     .football.player-main-block {
