--- a/markup/_layouts/_content/_homepage/top5-manager.jade
+++ b/markup/_layouts/_content/_homepage/top5-manager.jade
@@ -76,7 +76,7 @@ div.tab-content(id="top5-manager-content")
 									div.menu-item.top-5
 										div.players 
 											#top5-managers-nav(style='display: block;')
-												img#top-manager-nav(src='assets/img/about/person1.png', style='display: block;')
+												img#top-manager-nav(src='assets/img/white-helmet.png', style='display: block;')
 											div.number
 												p 1
 											div.manager-thumbnail-name
@@ -88,7 +88,7 @@ div.tab-content(id="top5-manager-content")
 									div.menu-item.top-5
 										div.players 
 											#top5-managers-nav(style='display: block;')
-												img#top-manager-nav(src='assets/img/about/person11.png', style='display: block;')
+												img#top-manager-nav(src='assets/img/white-helmet.png', style='display: block;')
 											div.number
 												p 2
 											div.manager-thumbnail-name
@@ -100,7 +100,7 @@ div.tab-content(id="top5-manager-content")
 									div.menu-item.top-5
 										div.players 
 											#top5-managers-nav(style='display: block;')
-												img#top-manager-nav(src='assets/img/about/person10.png', style='display: block;')
+												img#top-manager-nav(src='assets/img/white-helmet.png', style='display: block;')
 											div.number
 												p 3
 											div.manager-thumbnail-name
@@ -112,7 +112,7 @@ div.tab-content(id="top5-manager-content")
 									div.menu-item.top-5
 										div.players 
 											#top5-managers-nav(style='display: block;')
-												img#top-manager-nav(src='assets/img/about/person4.png', style='display: block;')
+												img#top-manager-nav(src='assets/img/white-helmet.png', style='display: block;')
 											div.number
 												p 4
 											div.manager-thumbnail-name
@@ -124,7 +124,7 @@ div.tab-content(id="top5-manager-content")
 									div.menu-item.top-5
 										div.players 
 											#top5-managers-nav(style='display: block;')
-												img#top-manager-nav(src='assets/img/about/person5.png', style='display: block;')
+												img#top-manager-nav(src='assets/img/white-helmet.png', style='display: block;')
 											div.number
 												p 5
 											div.manager-thumbnail-name
@@ -139,7 +139,7 @@ div.tab-content(id="top5-manager-content")
 										div.row.player
 											div.col-12.col-xs-5.hidden-md-down.col-lg-5.no-padding
 												#top5-managers-picture(style='display: block;')
-													img#top-manager(src='assets/img/about/person1.png', style='display: block;'  class="img-fluid")
+													img#top-manager(src='assets/img/white-helmet.png', style='display: block;'  class="img-fluid")
 													div.manager-image-inner
 														div.number
 															p 1
@@ -241,7 +241,7 @@ div.tab-content(id="top5-manager-content")
 										div.row.player
 											div.col-12.col-xs-5.hidden-md-down.col-lg-5
 												#top5-managers-picture(style='display: block;')
-													img#top-manager(src='assets/img/about/person11.png', style='display: block;'  class="img-fluid")
+													img#top-manager(src='assets/img/white-helmet.png', style='display: block;'  class="img-fluid")
 													div.manager-image-inner
 														div.number
 															p 2
@@ -344,7 +344,7 @@ div.tab-content(id="top5-manager-content")
 										div.row.player
 											div.col-12.col-xs-5.hidden-md-down.col-lg-5
 												#top5-managers-picture(style='display: block;')
-													img#top-manager(src='assets/img/about/person10.png', style='display: block;'  class="img-fluid")
+													img#top-manager(src='assets/img/white-helmet.png', style='display: block;'  class="img-fluid")
 													div.manager-image-inner
 														div.number
 															p 3
@@ -447,7 +447,7 @@ div.tab-content(id="top5-manager-content")
 										div.row.player
 											div.col-12.col-xs-5.hidden-md-down.col-lg-5
 												#top5-managers-picture(style='display: block;')
-													img#top-manager(src='assets/img/about/person4.png', style='display: block;'  class="img-fluid")
+													img#top-manager(src='assets/img/white-helmet.png', style='display: block;'  class="img-fluid")
 													div.manager-image-inner
 														div.number
 															p 4
@@ -550,7 +550,7 @@ div.tab-content(id="top5-manager-content")
 										div.row.player
 											div.col-12.col-xs-5.hidden-md-down.col-lg-5
 												#top5-managers-picture(style='display: block;')
-													img#top-manager(src='assets/img/about/person5.png', style='display: block;'  class="img-fluid")
+													img#top-manager(src='assets/img/white-helmet.png', style='display: block;'  class="img-fluid")
 													div.manager-image-inner
 														div.number
 															p 5
