--- a/markup/_scss/sections/_nl-create-team.scss
+++ b/markup/_scss/sections/_nl-create-team.scss
@@ -700,6 +700,10 @@
       visibility: hidden;
     }
 
+    p.placeholder {
+      font-size: 14px;
+    }
+
   @include respond-to(wide-tablets){
 
     .football.player-main-block {
