--- a/markup/_layouts/_content/_homepage/upcoming_contest_soccer.jade
+++ b/markup/_layouts/_content/_homepage/upcoming_contest_soccer.jade
@@ -3,7 +3,7 @@ div.row.align-items-center.upcoming-contests
 		h5 contests
 
 div.row
-	div.col-lg-12.team
+	div.col-lg-12.team.no-padding-all-sides
 		div.nl-players-table.nl-contests-table.homepage-table
 
 			ul.nav.nav-tabs(role="tablist")
